# bbx

./: CONTRIBUTING.md  Makefile  README.md  USAGE.md  bbx.1  bbx.py  pyproject.toml
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
bbx/: __main__.py  allowlist.py  cli.py  core.py  output.py  paths.py  scan_context.py  scoring.py
bbx/checks/: __init__.py  base.py  http_probe.py  method_diff.py  openapi_fetch.py  reflection_check.py
bbx/commands/: analysis.py  exports.py  findings.py  imports.py  presets.py  scan.py  tags.py  workspace.py
flows/: 01_har_first.md  02_recon_blend.md  03_lab_scan.md  04_modular_layout.md
samples/: ffuf.json  gau.txt  httpx.jsonl  katana.jsonl  naabu.txt  nuclei.jsonl  session.har  subfinder.txt  wayback.txt
tests/: test_smoke.py
