[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbx"
version = "0.1.1"
description = "SQLite-backed CLI for organizing bug bounty artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Tomislav Perić" }
]
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.3",
]

[project.scripts]
bbx = "bbx.cli:main"

[tool.setuptools.packages.find]
include = ["bbx*"]
exclude = ["tests*", "flows*", "assets*", "samples*", "docs*"]

[tool.setuptools.package-data]
bbx = ["py.typed"]